--- a/renderer/index.html
+++ b/renderer/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Electron Test</title>
+    <link rel="stylesheet" href="./assets/styles/index.scss">
   </head>
   <body>
     <div id="app"></div>
